--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,46 @@
 body {
-	font-family: ;
-	font-size: ;
+	font-family: Times, Times New Roman, Georgia, serif;
+	font-size: 14px;
 }
 
+body, html {
+	margin: 0;
+	padding: 0;
+}
 
 
 /* header  */
 
 .top-bar {
     background-color: #cecece;
+}
+
+.top-bar-inside ul li {
+    display: inline;
+    padding: 5px 7px;
+    border-right: 1px solid;
+}
+
+.top-bar-inside ul {
+	margin: 0;
+	padding: 5px 0;
+}
+
+.top-bar-inside, .top-banner {
+    display: flex;
+    max-width: 1000px;
+    margin: 0 auto;
+}
+
+.top-banner div {
+	padding: 0 3px;
+}
+
+.contact-info {
+    flex-grow: 1;
+}
+
+i.fa.fa-search {
+    background-color: white;
+    padding: 3px;
 }
