--- a/css/style.css
+++ b/css/style.css
@@ -77,12 +77,15 @@ i.fa.fa-search {
 }
 
 .main .hit-news {
-    flex-basis: 20%
+    flex-basis: 20%;
+    padding: 0 5px;
 }
 
 .hit-news ul {
     padding: 0 15px;
     margin: 0;
+    height: 300px;
+    overflow-y: scroll;
 }
 
 .hit-news ul li{
@@ -92,4 +95,26 @@ i.fa.fa-search {
 
 .main .ads-feature {
     flex-basis: 35%;
+}
+
+/* scroll bar hit news */
+
+.hit-news ul::-webkit-scrollbar-track
+{
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    border-radius: 10px;
+    background-color: #F5F5F5;
+}
+
+.hit-news ul::-webkit-scrollbar
+{
+    width: 12px;
+    background-color: #F5F5F5;
+}
+
+.hit-news ul::-webkit-scrollbar-thumb
+{
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+    background-color: #D62929;
 }
